[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyn-python"
version = "0.1.0"
description = "EYN Python: a modular toolkit (YT downloader, file converter, and more)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Luke (WilsonIIRIP)" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
  "yt-dlp>=2024.5.27",
  "httpx>=0.27.0",
  "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "mypy>=1.10.0", "ruff>=0.5.0"]

[project.scripts]
eyn = "eyn_python.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
